--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
+  font-family: "Inter", sans-serif;
+}
+
+#root {
+  overflow-x: hidden !important;
 }
