--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,23 @@ body {
 #root {
   overflow-x: hidden !important;
 }
+
+#Calend__timetable {
+  width: 100% !important;
+  padding-left: 35px !important;
+}
+
+.Calend__ButtonIcon__container:nth-last-child(2) {
+  display: none !important;
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -48%) scale(0.2);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
