--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,10 @@ body {
   padding-left: 35px !important;
 }
 
-.Calend__ButtonIcon__container:nth-last-child(2) {
-  display: none !important;
+@media (max-width: 450px) {
+  .Calend__ButtonIcon__container:nth-last-child(2) {
+    display: none !important;
+  }
 }
 
 @keyframes contentShow {
