--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,14 @@ body {
   overflow-x: hidden !important;
 }
 
-#Calend__timetable {
+#Kalend__timetable {
   width: 100% !important;
   padding-left: 35px !important;
 }
 
 @media (max-width: 450px) {
-  .Calend__ButtonIcon__container:nth-last-child(2) {
+  .Kalend__CalendarDesktopNavigation__buttons
+    .Kalend__ButtonIcon__container:nth-last-child(2) {
     display: none !important;
   }
 }
